--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
                     android:background="@drawable/rounded_button"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:textColor="@color/black"
+                    android:textColor="#FF0000"
                     android:textSize="20dp"
                     android:text="AC"
                     >
